tests/ui/proc-macro/issue-118455-skip-err-builtin.stderr
error: cannot find attribute `some_nonexistent_attribute`
  --> $DIR/issue-118455-skip-err-builtin.rs:1:4
   |
LL | #![some_nonexistent_attribute]
   |    ^^^^^^^^^^^^^^^^^^^^^^^^^^ not found in this scope

error: aborting due to 1 previous error

