tests/ui/proc-macro/issue-118455-skip-err-builtin.rs
#![some_nonexistent_attribute]
//~^ ERROR cannot find attribute `some_nonexistent_attribute`
#[derive(Debug)]
pub struct SomeUserCode;

fn main() {}
